# emojiSlugMappingGen.py

./: .gitignore  .gitlab-ci.yml  ReadMe.md  pyproject.toml
emojiSlugMappingGen/: __init__.py  __main__.py  core.py  replacer.py
emojiSlugMappingGen/backends/: __init__.py  cldr.py  emoji_lookup.py  gemoji.py  gemojione.py  iamcal.py
emojiSlugMappingGen/licenses/: MIT.md
tests/: tests.py
