[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "emojiSlugMappingGen"
readme = "ReadMe.md"
description = "A tool generating mappings from slugs to emoji sequencies to be used in tools doing replacements "
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["emojiSlugMappingGen"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = [
	"requests",
	"emojiNorm",  # @ git+https://codeberg.org/KOLANICH-libs/emojiNorm.py
	"transformerz[libintl]",  # @ git+https://codeberg.org/KOLANICH-libs/transformerz.py
]
[project.scripts]
pyEmojiSlugMappingGen = "emojiSlugMappingGen.__main__:main"

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/emojiSlugMappingGen.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["emojiSlugMappingGen", "emojiSlugMappingGen.*"]

[tool.setuptools_scm]

[tool.black]
line-length = 100500
